--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
   </head>
   <body>
     <h1>Hello</h1>
-    <i class="fas fa-user"></i>
+    <a href="index.html" class="btn">Home</a>
   </body>
 </html>
