create navbar mini project

--- a/index.html
+++ b/index.html
@@ -22,7 +22,24 @@
     <title>Mini Projects with CSS Grid</title>
   </head>
   <body>
-    <h1>Hello</h1>
-    <a href="index.html" class="btn">Home</a>
+    <div class="path">
+      <nav class="main-nav">
+        <ul>
+          <li>
+            <a href="hero.html">Hero</a>
+          </li>
+          <li>
+            <a href="cards.html">cards</a>
+          </li>
+          <li>
+            <a href="tiles.html">tiles</a>
+          </li>
+          <li>
+            <a href="layout.html">layout</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <!-- <a href="index.html" class="btn">back to home</a> -->
   </body>
 </html>
