--- a/cards.html
+++ b/cards.html
@@ -19,27 +19,96 @@
       rel="stylesheet"
     />
     <!--load all styles -->
-    <title>Mini Projects with CSS Grid</title>
+    <title>Mini Projects | Cards</title>
   </head>
   <body>
-    <div class="path">
-      <nav class="main-nav">
-        <ul>
-          <li>
-            <a href="hero.html">Hero</a>
-          </li>
-          <li>
-            <a href="cards.html">cards</a>
-          </li>
-          <li>
-            <a href="tiles.html">tiles</a>
-          </li>
-          <li>
-            <a href="layout.html">layout</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <!-- <a href="index.html" class="btn">back to home</a> -->
+    <section class="cards">
+      <div class="title">
+        <h1>three column layout</h1>
+      </div>
+      <div class="card-center">
+        <!-- single card -->
+        <article class="card">
+          <img src="./setup-files/images/size-image-1.jpeg" alt="" />
+          <!-- card info -->
+          <div class="card-info">
+            <h3>card title</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum
+              consequuntur pariatur nostrum? Placeat, saepe nostrum?
+            </p>
+          </div>
+          <!-- card footer -->
+          <div class="card-footer">
+            <span><i class="fab fa-twitter"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+            <span><i class="fab fa-squarespace"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+          </div>
+        </article>
+        <!-- end of single card -->
+        <!-- single card -->
+        <article class="card">
+          <img src="./setup-files/images/size-image-2.jpeg" alt="" />
+          <!-- card info -->
+          <div class="card-info">
+            <h3>card title</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum
+              consequuntur pariatur nostrum? Placeat, saepe nostrum?
+            </p>
+          </div>
+          <!-- card footer -->
+          <div class="card-footer">
+            <span><i class="fab fa-twitter"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+            <span><i class="fab fa-squarespace"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+          </div>
+        </article>
+        <!-- end of single card -->
+        <!-- single card -->
+        <article class="card">
+          <img src="./setup-files/images/size-image-3.jpeg" alt="" />
+          <!-- card info -->
+          <div class="card-info">
+            <h3>card title</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum
+              consequuntur pariatur nostrum? Placeat, saepe nostrum?
+            </p>
+          </div>
+          <!-- card footer -->
+          <div class="card-footer">
+            <span><i class="fab fa-twitter"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+            <span><i class="fab fa-squarespace"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+          </div>
+        </article>
+        <!-- end of single card -->
+        <!-- single card -->
+        <article class="card">
+          <img src="./setup-files/images/size-image-4.jpeg" alt="" />
+          <!-- card info -->
+          <div class="card-info">
+            <h3>card title</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum
+              consequuntur pariatur nostrum? Placeat, saepe nostrum?
+            </p>
+          </div>
+          <!-- card footer -->
+          <div class="card-footer">
+            <span><i class="fab fa-twitter"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+            <span><i class="fab fa-squarespace"></i></span>
+            <span><i class="fab fa-linkedin"></i></span>
+          </div>
+        </article>
+        <!-- end of single card -->
+      </div>
+    </section>
+    <a href="index.html" class="btn">back to home</a>
   </body>
 </html>
