fixing hight issue with display grid and makeing grid-template-rows auto 1fr auto in .card class

--- a/cards.html
+++ b/cards.html
@@ -34,8 +34,9 @@
           <div class="card-info">
             <h3>card title</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum
-              consequuntur pariatur nostrum? Placeat, saepe nostrum?
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita
+              corporis officia ex illo, modi harum at exercitationem debitis in
+              tenetur?
             </p>
           </div>
           <!-- card footer -->
