--- a/tiles.html
+++ b/tiles.html
@@ -19,27 +19,61 @@
       rel="stylesheet"
     />
     <!--load all styles -->
-    <title>Mini Projects with CSS Grid</title>
+    <title>Mini Projects | Tiles</title>
   </head>
   <body>
-    <div class="path">
-      <nav class="main-nav">
-        <ul>
-          <li>
-            <a href="hero.html">Hero</a>
-          </li>
-          <li>
-            <a href="cards.html">cards</a>
-          </li>
-          <li>
-            <a href="tiles.html">tiles</a>
-          </li>
-          <li>
-            <a href="layout.html">layout</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <!-- <a href="index.html" class="btn">back to home</a> -->
+    <section class="tiles">
+      <div class="title">
+        <h1>tiles layout</h1>
+      </div>
+      <div class="tiles-center">
+        <!-- single tile -->
+        <article class="tile-1">
+          <img src="./setup-files/images/size-image-1.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-2">
+          <img src="./setup-files/images/size-image-2.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-3">
+          <img src="./setup-files/images/size-image-3.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-4">
+          <img src="./setup-files/images/size-image-4.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-5">
+          <img src="./setup-files/images/size-image-1.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-6">
+          <img src="./setup-files/images/size-image-2.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-7">
+          <img src="./setup-files/images/size-image-3.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-8">
+          <img src="./setup-files/images/size-image-4.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <article class="tile-9">
+          <img src="./setup-files/images/size-image-1.jpeg" alt="" />
+        </article>
+        <!-- end of single tile -->
+      </div>
+    </section>
+    <a href="index.html" class="btn">back to home</a>
   </body>
 </html>
