styling layout project for small screens

--- a/layout.html
+++ b/layout.html
@@ -19,11 +19,16 @@
       rel="stylesheet"
     />
     <!--load all styles -->
-    <title>Mini Projects with CSS Grid</title>
+    <title>Mini Projects | Layouts</title>
   </head>
   <body>
-    <div class="path">
-      <nav class="main-nav">
+    <main class="main">
+      <!-- header -->
+      <header class="header">
+        <h2>grid makes layout easy</h2>
+      </header>
+      <!-- navbar -->
+      <nav class="navbar">
         <ul>
           <li>
             <a href="hero.html">Hero</a>
@@ -39,7 +44,31 @@
           </li>
         </ul>
       </nav>
-    </div>
-    <!-- <a href="index.html" class="btn">back to home</a> -->
+      <!-- content -->
+      <section class="content">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis,
+          deleniti numquam, ratione tempora sed fugiat asperiores vel reiciendis
+          sequi eum eaque, nam id non ab esse ipsum dolore cum! Nobis explicabo
+          nesciunt error amet pariatur aut, doloribus vero sapiente libero,
+          ratione labore quisquam est reprehenderit saepe iure tenetur ea odio
+          quam, illo quasi magnam porro! Soluta beatae doloribus eum earum nam
+          tempore similique tenetur vel quaerat libero voluptatibus totam
+          assumenda, modi quas eveniet qui possimus?
+        </p>
+      </section>
+      <!-- sidebar -->
+      <section class="sidebar">
+        <span><i class="fab fa-twitter"></i></span>
+        <span><i class="fab fa-linkedin"></i></span>
+        <span><i class="fab fa-squarespace"></i></span>
+        <span><i class="fab fa-linkedin"></i></span>
+      </section>
+      <!-- footer -->
+      <footer class="footer">
+        <p>Copyright &copy; All Rights Reserved</p>
+      </footer>
+    </main>
+    <a href="index.html" class="btn">back to home</a>
   </body>
 </html>
